improved speed of bam2sam (use printf instead of writef)

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,7 +3,10 @@ FILES=../bamfile.d ../rangetransformer.d ../chunkinputstream.d ../bgzfrange.d \
 	  ../tagstorage.d ../tagvalue.d ../utils/switchendianness.d
 
 bam2sam: $(FILES) bam2sam.d
-	dmd $(FILES) bam2sam.d -ofbam2sam -O -release -inline -version=serial
+	dmd $(FILES) bam2sam.d -ofbam2sam -O -release -inline -version=serial -g
+
+bam2sam-gdc: $(FILES) bam2sam.d
+	gdc $(FILES) bam2sam.d -o bam2sam -O3 -frelease -finline -fno-bounds-check -fno-assert -fversion=serial -g -lpthread
 
 clean:
 	rm *.o
