--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,12 +1,16 @@
 FILES=../bamfile.d ../rangetransformer.d ../chunkinputstream.d ../bgzfrange.d \
 	  ../utils/inputrangechunks.d ../samheader.d ../reference.d ../alignment.d \
-	  ../tagstorage.d ../tagvalue.d ../utils/switchendianness.d
+	  ../tagstorage.d ../tagvalue.d ../utils/switchendianness.d \
+	  ../validation/alignment.d ../utils/algo.d
 
 bam2sam: $(FILES) bam2sam.d
 	dmd $(FILES) bam2sam.d -ofbam2sam -O -release -inline -version=serial -g
 
 bam2sam-gdc: $(FILES) bam2sam.d
 	gdc $(FILES) bam2sam.d -o bam2sam -O3 -frelease -finline -fno-bounds-check -fno-assert -fversion=parallel -g -lpthread
+
+validator: $(FILES) validator.d
+	dmd $(FILES) validator.d -ofvalidator -O -release -inline
 
 clean:
 	rm *.o
