--- a/benchmarks/Makefile
+++ b/benchmarks/Makefile
@@ -1,6 +1,8 @@
-FILES=../bamfile.d ../rangetransformer.d ../chunkinputstream.d ../bgzfrange.d \
-	  ../utils/inputrangechunks.d ../samheader.d ../reference.d ../alignment.d \
-	  ../tagstorage.d ../tagvalue.d ../utils/switchendianness.d
+FILES=../bamfile.d ../utils/range.d ../chunkinputstream.d ../bgzfrange.d \
+	  ../samheader.d ../reference.d ../alignment.d \
+	  ../tagstorage.d ../tagvalue.d ../utils/switchendianness.d \
+	  ../virtualoffset.d ../randomaccessmanager.d ../bai/read.d \
+	  ../bai/bin.d ../bai/chunk.d ../bai/utils/algo.d ../utils/algo.d
 
 DMDFLAGS=-O -release -inline
 GDCFLAGS=-O3 -frelease -finline -fno-assert -fno-bounds-check
