updated benchmarks code

--- a/benchmarks/Makefile
+++ b/benchmarks/Makefile
@@ -2,7 +2,9 @@ FILES=../bamfile.d ../utils/range.d ../chunkinputstream.d ../bgzfrange.d \
 	  ../samheader.d ../reference.d ../alignment.d \
 	  ../tagstorage.d ../tagvalue.d ../utils/switchendianness.d \
 	  ../virtualoffset.d ../randomaccessmanager.d ../bai/read.d \
-	  ../bai/bin.d ../bai/chunk.d ../bai/utils/algo.d ../utils/algo.d
+	  ../bai/bin.d ../bai/chunk.d ../bai/utils/algo.d ../utils/algo.d \
+	  ../alignmentrange.d ../utils/memoize.d
+
 
 DMDFLAGS=-O -release -inline
 GDCFLAGS=-O3 -frelease -finline -fno-assert -fno-bounds-check
