--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,7 +4,8 @@ FILES=../bamfile.d ../chunkinputstream.d ../bgzfrange.d \
 	  ../validation/alignment.d ../utils/algo.d ../randomaccessmanager.d \
 	  ../bai/read.d ../bai/chunk.d ../bai/bin.d ../bai/utils/algo.d \
 	  ../virtualoffset.d ../utils/range.d ../utils/memoize.d ../sam/serialize.d \
-	  ../utils/format.d ../alignmentrange.d
+	  ../utils/format.d ../alignmentrange.d ../constants.d ../bamoutput.d \
+	  ../bgzfcompress.d
 
 DMDFLAGS=-O -release -inline
 GDCFLAGS=-O3 -frelease -finline -fno-assert -fno-bounds-check -lpthread -g
