refactored tag storage

--- a/CLItools/Makefile
+++ b/CLItools/Makefile
@@ -1,6 +1,6 @@
 FILES=../bamfile.d ../chunkinputstream.d ../bgzfrange.d \
 	  ../samheader.d ../reference.d ../alignment.d \
-	  ../tagstorage.d ../tagvalue.d ../utils/switchendianness.d \
+	  ../tagvalue.d ../utils/switchendianness.d \
 	  ../validation/alignment.d ../utils/algo.d ../randomaccessmanager.d \
 	  ../bai/read.d ../bai/chunk.d ../bai/bin.d ../bai/utils/algo.d \
 	  ../virtualoffset.d ../utils/range.d ../utils/memoize.d ../sam/serialize.d \
