--- a/benchmarks/Makefile
+++ b/benchmarks/Makefile
@@ -1,13 +1,14 @@
 FILES=../bamfile.d ../utils/range.d ../chunkinputstream.d ../bgzfrange.d \
 	  ../samheader.d ../reference.d ../alignment.d \
-	  ../tagstorage.d ../tagvalue.d ../utils/switchendianness.d \
+	  ../tagvalue.d ../utils/switchendianness.d \
 	  ../virtualoffset.d ../randomaccessmanager.d ../bai/read.d \
 	  ../bai/bin.d ../bai/chunk.d ../bai/utils/algo.d ../utils/algo.d \
-	  ../alignmentrange.d ../utils/memoize.d
+	  ../alignmentrange.d ../utils/memoize.d ../constants.d ../utils/array.d \
+	  ../utils/value.d ../bgzfcompress.d
 
 
 DMDFLAGS=-O -release -inline
-GDCFLAGS=-O3 -frelease -finline -fno-assert -fno-bounds-check
+GDCFLAGS=-O3 -frelease -finline -fno-assert -fno-bounds-check -lpthread
 
 all: serial parallel serial-gdc parallel-gdc
 
