error-tolerant sam parsing

--- a/sam/Makefile
+++ b/sam/Makefile
@@ -1,7 +1,8 @@
 all: alignment-test
 
 sam_alignment.d: sam_alignment.rl
-	ragel sam_alignment.rl -D -G2
+	ragel sam_alignment.rl -D
+	sed -i "s/static const/static/g" sam_alignment.d
 	echo 'module sam.sam_alignment;' | cat - sam_alignment.d > .sam_alignment.d.tmp
 	mv .sam_alignment.d.tmp sam_alignment.d
 
