--- a/sam/Makefile
+++ b/sam/Makefile
@@ -1,13 +1,14 @@
 all: alignment-test
 
-sam_alignment.d: sam_alignment.rl
+recordparser.d: sam_alignment.rl
 	ragel sam_alignment.rl -D
 	sed -i "s/static const/static/g" sam_alignment.d
-	echo 'module sam.sam_alignment;' | cat - sam_alignment.d > .sam_alignment.d.tmp
-	mv .sam_alignment.d.tmp sam_alignment.d
+	echo 'module sam.recordparser;' | cat - sam_alignment.d > .sam_alignment.d.tmp
+	rm sam_alignment.d
+	mv .sam_alignment.d.tmp recordparser.d
 
-alignment-test: sam_alignment.d
-	rdmd -I../ -unittest --main sam_alignment.d
+alignment-test: recordparser.d
+	rdmd -I../ -unittest --main recordparser.d
 
 clean:
-	rm sam_alignment.d
+	rm record-parser.d
