--- a/CLItools/Makefile
+++ b/CLItools/Makefile
@@ -8,6 +8,11 @@ FILES=../bamfile.d ../chunkinputstream.d ../bgzfrange.d \
 	  ../bgzfcompress.d ../utils/array.d ../utils/value.d ../region.d \
 	  ../jsonserialization.d ../samfile.d ../sam/recordparser.d
 
+all: sambamba-dmd
+
+../sam/recordparser.d:
+	cd ../sam && make recordparser.d
+
 DMDFLAGS=-O -release -inline -g
 GDCFLAGS=-O3 -frelease -finline -fno-assert -fno-bounds-check -lpthread -g -funroll-all-loops -finline-limit=8192
 
