reduce amount of allocations during SAM parsing

--- a/sam/Makefile
+++ b/sam/Makefile
@@ -1,5 +1,11 @@
 all: alignment-test
 
+fastrecordparser: sam_alignment.rl
+	ragel sam_alignment.rl -D -G2
+	echo 'module sam.recordparser;' | cat - sam_alignment.d > .sam_alignment.d.tmp
+	rm sam_alignment.d
+	mv .sam_alignment.d.tmp recordparser.d
+
 recordparser.d: sam_alignment.rl
 	ragel sam_alignment.rl -D
 	sed -i "s/static const/static/g" sam_alignment.d
