--- a/CLItools/Makefile
+++ b/CLItools/Makefile
@@ -15,23 +15,36 @@ all: sambamba-dmd
 ../sam/recordparser.d:
 	cd ../sam && make recordparser.d
 
-DMDFLAGS=-O -release -inline -g
-GDCFLAGS=-O3 -frelease -finline -fno-assert -fno-bounds-check -lpthread -g -funroll-all-loops -finline-limit=8192
+DMDFLAGSFULL=-O -release -inline -g
+GDCFLAGSFULL=-O3 -frelease -finline -fno-assert -fno-bounds-check -lpthread -g -funroll-all-loops -finline-limit=8192
 
-SAMBAMBA_FILES=sambamba/filter.d sambamba/serializer.d sambamba/sambamba.d
+DMDFLAGS=$(DMDFLAGSFULL) -version=standalone
+GDCFLAGS=$(GDCFLAGSFULL) -fversion=standalone
+
+SAMBAMBA_VIEW_FILES=sambamba-view/filter.d sambamba-view/serializer.d sambamba-view/view.d
 SAMBAMBA_INDEX_FILES=sambamba-index/index.d
 SAMBAMBA_SORT_MERGE_COMMON_FILES=common/comparators.d common/nwayunion.d
-SAMBAMBA_SORT_FILES=sambamba-sort/sort.d sambamba-sort/thirdparty/mergesort.d $(SAMBAMBA_SORT_MERGE_COMMON_FILES)
-SAMBAMBA_MERGE_FILES=sambamba-merge/merge.d ../utils/samheadermerger.d ../utils/graph.d $(SAMBAMBA_SORT_MERGE_COMMON_FILES)
+SAMBAMBA_SORT_FILES=sambamba-sort/sort.d sambamba-sort/thirdparty/mergesort.d
+SAMBAMBA_MERGE_FILES=sambamba-merge/merge.d ../utils/samheadermerger.d ../utils/graph.d
 SAMBAMBA_FLAGSTAT_FILES=sambamba-flagstat/flagstat.d
 
-sambamba-dmd: $(FILES) $(SAMFILES) $(SAMBAMBA_FILES)
-	mkdir -p build
-	dmd $(DMDFLAGS) $(FILES) $(SAMFILES) $(SAMBAMBA_FILES) -ofbuild/sambamba
+SAMBAMBA_FILES=$(FILES) $(SAMFILES) $(SAMBAMBA_VIEW_FILES) $(SAMBAMBA_INDEX_FILES) $(SAMBAMBA_FLAGSTAT_FILES) $(SAMBAMBA_SORT_MERGE_COMMON_FILES) $(SAMBAMBA_SORT_FILES) $(SAMBAMBA_MERGE_FILES) sambamba/main.d
 
-sambamba-gdc: $(FILES) $(SAMFILES) $(SAMBAMBA_FILES)
+sambamba-dmd: $(SAMBAMBA_FILES)
 	mkdir -p build
-	gdc $(GDCFLAGS) $(FILES) $(SAMFILES) $(SAMBAMBA_FILES) -o build/sambamba
+	dmd $(DMDFLAGSFULL) $(SAMBAMBA_FILES) -ofbuild/sambamba
+
+sambamba-gdc: $(SAMBAMBA_FILES)
+	mkdir -p build
+	gdc $(GDCFLAGSFULL) $(SAMBAMBA_FILES) -o build/sambamba
+
+sambamba-view-dmd: $(FILES) $(SAMFILES) $(SAMBAMBA_VIEW_FILES)
+	mkdir -p build
+	dmd $(DMDFLAGS) $(FILES) $(SAMFILES) $(SAMBAMBA_VIEW_FILES) -ofbuild/sambamba-view
+
+sambamba-view-gdc: $(FILES) $(SAMFILES) $(SAMBAMBA_VIEW_FILES)
+	mkdir -p build
+	gdc $(GDCFLAGS) $(FILES) $(SAMFILES) $(SAMBAMBA_VIEW_FILES) -o build/sambamba-view
 
 sambamba-index-dmd: $(FILES) $(SAMBAMBA_INDEX_FILES)
 	mkdir -p build
@@ -41,21 +54,21 @@ sambamba-index-gdc: $(FILES) $(SAMBAMBA_INDEX_FILES)
 	mkdir -p build
 	gdc $(GDCFLAGS) $(FILES) $(SAMBAMBA_INDEX_FILES) -o build/sambamba-index
 
-sambamba-sort-dmd: $(FILES) $(SAMBAMBA_SORT_FILES)
+sambamba-sort-dmd: $(FILES) $(SAMBAMBA_SORT_FILES) $(SAMBAMBA_SORT_MERGE_COMMON_FILES)
 	mkdir -p build
-	dmd $(DMDFLAGS) $(FILES) $(SAMBAMBA_SORT_FILES) -ofbuild/sambamba-sort
+	dmd $(DMDFLAGS) $(FILES) $(SAMBAMBA_SORT_FILES) $(SAMBAMBA_SORT_MERGE_COMMON_FILES) -ofbuild/sambamba-sort
 
-sambamba-sort-gdc: $(FILES) $(SAMBAMBA_SORT_FILES)
+sambamba-sort-gdc: $(FILES) $(SAMBAMBA_SORT_FILES) $(SAMBAMBA_SORT_MERGE_COMMON_FILES)
 	mkdir -p build
-	gdc $(GDCFLAGS) $(FILES) $(SAMBAMBA_SORT_FILES) -o build/sambamba-sort
+	gdc $(GDCFLAGS) $(FILES) $(SAMBAMBA_SORT_FILES) $(SAMBAMBA_SORT_MERGE_COMMON_FILES) -o build/sambamba-sort
 
-sambamba-merge-dmd: $(FILES) $(SAMBAMBA_MERGE_FILES)
+sambamba-merge-dmd: $(FILES) $(SAMBAMBA_MERGE_FILES) $(SAMBAMBA_SORT_MERGE_COMMON_FILES) 
 	mkdir -p build
-	dmd $(DMDFLAGS) $(FILES) $(SAMBAMBA_MERGE_FILES) -ofbuild/sambamba-merge
+	dmd $(DMDFLAGS) $(FILES) $(SAMBAMBA_MERGE_FILES) $(SAMBAMBA_SORT_MERGE_COMMON_FILES) -ofbuild/sambamba-merge
 
-sambamba-merge-gdc: $(FILES) $(SAMBAMBA_MERGE_FILES)
+sambamba-merge-gdc: $(FILES) $(SAMBAMBA_MERGE_FILES) $(SAMBAMBA_SORT_MERGE_COMMON_FILES)  
 	mkdir -p build
-	gdc $(GDCFLAGS) $(FILES) $(SAMBAMBA_MERGE_FILES) -o build/sambamba-merge
+	gdc $(GDCFLAGS) $(FILES) $(SAMBAMBA_MERGE_FILES) $(SAMBAMBA_SORT_MERGE_COMMON_FILES) -o build/sambamba-merge
 
 sambamba-flagstat-dmd: $(FILES) $(SAMBAMBA_FLAGSTAT_FILES)
 	mkdir -p build
@@ -72,3 +85,6 @@ sambamba-dmd-dev: $(FILES) $(SAMFILES) $(SAMBAMBA_FILES)
 sambamba-gdc-dev: $(FILES) $(SAMFILES) $(SAMBAMBA_FILES)
 	mkdir -p build
 	gdc -g -O0 -lpthread $(FILES) $(SAMFILES) $(SAMBAMBA_FILES) -fversion=development -o build/sambamba
+
+clean:
+	rm -rf build/
