add manpage for sambamba-merge

--- a/CLItools/Makefile
+++ b/CLItools/Makefile
@@ -16,7 +16,7 @@ all: sambamba-dmd
 	cd ../sam && make recordparser.d
 
 DMDFLAGSFULL=-g#-O -release -inline -g
-GDCFLAGSFULL=-O3 -frelease -finline -fno-assert -fno-bounds-check -lpthread -g -funroll-all-loops -finline-limit=8192 -m32
+GDCFLAGSFULL=-O3 -frelease -finline -fno-assert -fno-bounds-check -lpthread -g -funroll-all-loops -finline-limit=8192
 
 DMDFLAGS=$(DMDFLAGSFULL) -version=standalone
 GDCFLAGS=$(GDCFLAGSFULL) -fversion=standalone
