--- a/CLItools/Makefile
+++ b/CLItools/Makefile
@@ -24,7 +24,7 @@ GDCFLAGS=$(GDCFLAGSFULL) -fversion=standalone
 SAMBAMBA_VIEW_FILES=sambamba-view/filtering.d sambamba-view/headerserializer.d sambamba-view/alignmentrangeprocessor.d sambamba-view/view.d sambamba-view/queryparser.d ../utils/pratt_parser.d
 SAMBAMBA_INDEX_FILES=sambamba-index/index.d
 SAMBAMBA_SORT_MERGE_COMMON_FILES=common/comparators.d common/nwayunion.d
-SAMBAMBA_SORT_FILES=sambamba-sort/sort.d sambamba-sort/thirdparty/mergesort.d
+SAMBAMBA_SORT_FILES=sambamba-sort/sort.d sambamba-sort/thirdparty/mergesort.d ../utils/tmpfile.d
 SAMBAMBA_MERGE_FILES=sambamba-merge/merge.d ../utils/samheadermerger.d ../utils/graph.d ../validation/samheader.d
 SAMBAMBA_FLAGSTAT_FILES=sambamba-flagstat/flagstat.d
 
