lazy header and bai file initialization
There're no support for shared libraries yet, and bindings
are going to call CLI tools for every operation. Under such
circumstances it's crucial to not do unnecessary stuff in
BamFile constructor.
One of observations is that SAM header is unused for viewing reads,
and therefore it's parsing can be delayed until necessary.
As for BAI initialization, that wasn't absolutely necessary as
there're two common cases. Either user iterates ALL alignments in
a file, and time spent on reading BAI is just negligible, or he/she
makes a region query, and we must read index file anyway.

--- a/CLItools/Makefile
+++ b/CLItools/Makefile
@@ -15,7 +15,7 @@ all: sambamba-dmd
 ../sam/recordparser.d:
 	cd ../sam && make recordparser.d
 
-DMDFLAGSFULL=-g#-O -release -inline -g
+DMDFLAGSFULL=-g -release -inline#-O -release -inline -g
 GDCFLAGSFULL=-O3 -frelease -finline -fno-assert -fno-bounds-check -lpthread -g -funroll-all-loops -finline-limit=8192
 
 DMDFLAGS=$(DMDFLAGSFULL) -version=standalone
@@ -41,6 +41,10 @@ sambamba-gdc: $(SAMBAMBA_FILES) fastrecordparser
 sambamba-gdc-32: $(SAMBAMBA_FILES) fastrecordparser
 	mkdir -p build
 	gdc -m32 $(GDCFLAGSFULL) $(SAMBAMBA_FILES) -o build/sambamba
+
+sambamba-dmd-serial: $(SAMBAMBA_FILES)
+	mkdir -p build
+	dmd $(DMDFLAGSFULL) $(SAMBAMBA_FILES) -version=serial -ofbuild/sambamba
 
 sambamba-view-dmd: $(FILES) $(SAMFILES) $(SAMBAMBA_VIEW_FILES)
 	mkdir -p build
@@ -92,6 +96,10 @@ sambamba-gdc-dev: $(FILES) $(SAMFILES) $(SAMBAMBA_FILES)
 
 fastrecordparser: ../sam/sam_alignment.rl
 	cd ../sam && make fastrecordparser && cd ..
+
+sambamba-view-dmd-serial: $(FILES) $(SAMFILES) $(SAMBAMBA_VIEW_FILES)
+	mkdir -p build
+	dmd $(DMDFLAGS) $(FILES) $(SAMFILES) $(SAMBAMBA_VIEW_FILES) -version=serial -ofbuild/sambamba-view
 
 clean:
 	rm -rf build/
