moved reconstruct.d to md/reconstruct.d
(Tag-specific functionality should be located in one directory.)
Also, the work on LDC support continues.

--- a/CLItools/Makefile
+++ b/CLItools/Makefile
@@ -30,7 +30,7 @@ FILES=$(addprefix ../,\
 	md/operation.d \
 	md/parse.d \
 	md/core.d \
-	reconstruct.d \
+	md/reconstruct.d \
 	bgzfcompress.d \
 	bamoutput.d \
 	bai/indexing.d \
